[build-system]
requires = ["setuptools>=46.4.0", "wheel", "sly>=0.4", "autopep8>=1.5.5"]
build-backend = "setuptools.build_meta"

[project]
name = "ASnake_Ahri_Fox"
dynamic = ["version"]
authors = [
  { name="Ahri Fox"},
]
description = "Python optimizing compiler for the ASnake programming language."
readme = "README.md"
requires-python = ">=3.6"
license = { file = "LICENSE.txt" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Cython",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Version Control :: Git"
]
keywords = ["programming language","transpiler","pyston","compiler"]

[project.urls]
Homepage = "https://asnake.org"
Github = "https://github.com/AhriFoxSnek/ASnake"
Issues = "https://github.com/AhriFoxSnek/ASnake/issues"

[options]
python_requires = ">=3.6"
install_requires = [
    "sly>=0.4",
    "autopep8>=1.5.5"
]

[tool.setuptools.package-data]
"data" = ["*.bat", "*.asnake", "*.py"]

[tool.setuptools.dynamic]
version = {attr = "ASnake.__version__"}

[entry-points]
console_scripts = [
    "ASnake = ASnake:main"
]

