[project]
name = "ASnake"
authors = [
  { name="Ahri Fox"},
]
description = "Python optimizing compiler for the ASnake programming language."
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Cython",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Version Control :: Git"
]
keywords = ["programming language","transpiler","pyston","compiler"]
requires-python = ">=3.6"
dependencies = [
    "sly>=0.4",
    "autopep8>=1.5.5",
    "ruff-api>=0.1.0"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://asnake.org"
Github = "https://github.com/AhriFoxSnek/ASnake"
Issues = "https://github.com/AhriFoxSnek/ASnake/issues"

[project.scripts]
ASnake = "ASnake.ASnake:main"

[build-system]
requires = ["setuptools", "wheel", "sly>=0.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "ASnake.ASnake.__version__"}

[tool.setuptools.package-data]
"ASnake.data" = ["*.bat", "*.asnake"]

# just so i don't forget. steps to build and upload ASnake for PyPi:
# 1: python -m build
# 2: python -m twine upload dist/*
