[options]
packages = find:
install_requires =
    sly>=0.4
    autopep8>=1.5.5

[options.entry_points]
console_scripts = 
    ASnake = ASnake:main

[metadata]
name = ASnake
version = 0.13.34
author = Ahri Fox
url = https://asnake.org
description = Optimizing Python transpiler for the ASnake programming language.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE.txt
